--- a/fairplay/package.json
+++ b/fairplay/package.json
@@ -9,13 +9,27 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nextui-org/react": "^2.2.9",
+    "@prisma/client": "^5.8.1",
+    "@radix-ui/react-icons": "^1.3.0",
+    "@react-stately/data": "^3.11.0",
+    "bcrypt": "^5.1.1",
+    "class-variance-authority": "^0.7.0",
+    "framer-motion": "^10.18.0",
+    "next": "14.0.4",
     "react": "^18",
+    "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18",
-    "next": "14.0.4"
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@types/node": "20.11.0",
+    "@types/react": "18.2.47",
     "autoprefixer": "^10.0.1",
     "postcss": "^8",
-    "tailwindcss": "^3.3.0"
+    "prisma": "^5.8.1",
+    "tailwindcss": "^3.4.1",
+    "typescript": "5.3.3"
   }
 }
