--- a/fairplay/.env
+++ b/fairplay/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="postgres://postgres:Mikkihiiri1@localhost:5432/fairplay_data"
+DATABASE_URL="postgres://avnadmin:AVNS_PVHDHZC_myOlnNpdha8@fairplay-fairplay.a.aivencloud.com:12739/Fairplay"
