--- a/fairplay/package.json
+++ b/fairplay/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.9",
     "@prisma/client": "^5.8.1",
     "@radix-ui/react-icons": "^1.3.0",
@@ -17,6 +18,7 @@
     "class-variance-authority": "^0.7.0",
     "framer-motion": "^10.18.0",
     "next": "14.0.4",
+    "next-auth": "^4.24.5",
     "react": "^18",
     "react-bootstrap-icons": "^1.10.3",
     "react-dom": "^18",
