--- a/fairplay/package.json
+++ b/fairplay/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.9",
-    "@prisma/client": "^5.8.1",
+    "@prisma/client": "^5.9.1",
     "@react-stately/data": "^3.11.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -21,16 +21,19 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
+    "@babel/preset-react": "^7.23.3",
     "@types/bcrypt": "^5.0.2",
     "@types/node": "20.11.0",
     "@types/react": "18.2.47",
     "autoprefixer": "^10.0.1",
+    "babel-loader": "^9.1.3",
     "postcss": "^8",
-    "prisma": "^5.8.1",
+    "prisma": "^5.9.1",
     "tailwindcss": "^3.4.1",
     "typescript": "5.3.3"
   }
