--- a/fairplay/package.json
+++ b/fairplay/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.9",
+    "@nextui-org/use-infinite-scroll": "^2.1.2",
     "@prisma/client": "^5.9.1",
     "@react-stately/data": "^3.11.0",
     "bcrypt": "^5.1.1",
