--- a/fairplay/package.json
+++ b/fairplay/package.json
@@ -11,11 +11,11 @@
   "dependencies": {
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.9",
-    "@nextui-org/use-infinite-scroll": "^2.1.2",
     "@prisma/client": "^5.9.1",
     "@react-stately/data": "^3.11.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
+    "formik": "^2.4.5",
     "framer-motion": "^10.18.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
@@ -24,7 +24,8 @@
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.4",
     "tailwind-merge": "^2.2.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "yup": "^1.3.3"
   },
   "devDependencies": {
     "@babel/preset-react": "^7.23.3",
