--- a/fairplay/package.json
+++ b/fairplay/package.json
@@ -19,6 +19,7 @@
     "framer-motion": "^10.18.0",
     "next": "^14.1.0",
     "next-auth": "^4.24.5",
+    "next-video": "^0.15.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
