--- a/fairplay/package.json
+++ b/fairplay/package.json
@@ -9,12 +9,17 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.0",
+    "@mui/material": "^5.15.13",
+    "@mui/x-date-pickers": "^6.19.7",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.10.2",
     "@react-stately/data": "^3.11.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
+    "dayjs": "^1.11.10",
     "formik": "^2.4.5",
     "framer-motion": "^10.18.0",
     "next": "^14.1.3",
