--- a/fairplay/package.json
+++ b/fairplay/package.json
@@ -20,6 +20,7 @@
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "dayjs": "^1.11.10",
+    "firebase": "^10.9.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.18.0",
     "next": "^14.1.3",
