--- a/fairplay/package.json
+++ b/fairplay/package.json
@@ -29,6 +29,7 @@
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.4",
+    "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.0",
     "tailwindcss-animate": "^1.0.7",
     "yup": "^1.3.3"
