--- a/fairplay/netlify.toml
+++ b/fairplay/netlify.toml
@@ -1,3 +1,3 @@
 [build]
-  command = "npm run build && npx prisma generate"
+  command = "npx prisma generate && npm run build"
   publish = "public"
