--- a/fairplay/package.json
+++ b/fairplay/package.json
@@ -13,6 +13,7 @@
     "@emotion/styled": "^11.11.0",
     "@mui/material": "^5.15.14",
     "@mui/x-date-pickers": "^6.19.8",
+    "@netlify/plugin-nextjs": "^5.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.10",
     "@prisma/client": "^5.11.0",
