--- a/fairplay/netlify.toml
+++ b/fairplay/netlify.toml
@@ -1,6 +1,7 @@
+[[plugins]]
+package = "@netlify/plugin-nextjs"
+
 [build]
   command = "npx prisma generate && npm run build"
   publish = "/build"
   base = "/"
-
-[[plugins]] package = "@netlify/plugin-nextjs"
