--- a/fairplay/package.json
+++ b/fairplay/package.json
@@ -11,8 +11,6 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
-    "@mui/material": "^5.15.14",
-    "@mui/x-date-pickers": "^6.19.8",
     "@netlify/plugin-nextjs": "^5.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
     "@nextui-org/react": "^2.2.10",
@@ -24,9 +22,10 @@
     "firebase": "^10.9.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.18.0",
-    "next": "^14.1.4",
+    "next": "^14.2.1",
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
+    "react-datetime-picker": "^5.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.4",
