--- a/fairplay/package.json
+++ b/fairplay/package.json
@@ -11,10 +11,11 @@
   "dependencies": {
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.0",
+    "@internationalized/date": "^3.5.3",
     "@netlify/plugin-nextjs": "^5.0.0",
     "@next-auth/prisma-adapter": "^1.0.7",
-    "@nextui-org/react": "^2.2.10",
-    "@prisma/client": "^5.12.1",
+    "@nextui-org/react": "^2.3.6",
+    "@prisma/client": "^5.14.0",
     "@react-stately/data": "^3.11.2",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
@@ -22,10 +23,9 @@
     "firebase": "^10.9.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.18.0",
-    "next": "^14.2.1",
+    "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
-    "react-datetime-picker": "^5.6.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.4",
@@ -42,7 +42,7 @@
     "autoprefixer": "^10.0.1",
     "babel-loader": "^9.1.3",
     "postcss": "^8",
-    "prisma": "^5.12.1",
+    "prisma": "^5.14.0",
     "tailwindcss": "^3.4.1",
     "typescript": "5.3.3"
   }
