--- a/fairplay/package.json
+++ b/fairplay/package.json
@@ -23,11 +23,14 @@
     "firebase": "^10.9.0",
     "formik": "^2.4.5",
     "framer-motion": "^10.18.0",
+    "jspdf": "^2.5.1",
+    "jspdf-autotable": "^3.8.2",
     "next": "^14.2.3",
     "next-auth": "^4.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^5.0.1",
+    "react-medium-image-zoom": "^5.2.4",
     "react-toastify": "^10.0.4",
     "sharp": "^0.33.3",
     "tailwind-merge": "^2.2.0",
