--- a/fairplay/netlify.toml
+++ b/fairplay/netlify.toml
@@ -2,5 +2,5 @@
 package = "@netlify/plugin-nextjs"
 
 [build]
-  command = "npm run build && npx prisma generate"
+  command = "npx prisma generate && npm run build"
   publish = ".next"
