--- a/fairplay/.env
+++ b/fairplay/.env
@@ -5,5 +5,5 @@
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
 DATABASE_URL="postgres://avnadmin:AVNS_PVHDHZC_myOlnNpdha8@fairplay-fairplay.a.aivencloud.com:12739/Fairplay"
-NEXTAUTH_URL="https://fairplayit22.netlify.app"
+NEXTAUTH_URL="http://localhost:3000"
 NEXTAUTH_SECRET=f3bb2c10bf6f0ac2f1baf7ee9d6f460c=
